Added a link to the githubrepo

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ v = 0
     <!--
         Footer
      -->
-    <footer>2019</footer>
+    <footer>2019 | See the source on <a href="https://github.com/PimMeulensteen/modeluva">Github</a></footer>
 </body>
 
 <script src="preload.js"></script>
