--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
      -->
             <section class="input" id="loop">
                 <h2>Loop-functie</h2>
-                <textarea rows="12" cols="90" contentEditable="true" autocomplete="off" autocorrect="off"
-                    autocapitalize="off" spellcheck="false">
+                <textarea contentEditable="true" autocomplete="off" autocorrect="off" autocapitalize="off"
+                    spellcheck="false">
 t = t+dt
 Fz = m*g #This is a comment
 FL = 0,5*C*d*v^2
@@ -74,8 +74,8 @@ als h <= 0 dan stop eindals
      -->
             <section class="input">
                 <h2>Setup-functie</h2>
-                <textarea rows="12" cols="90" contentEditable="true" autocomplete="off" autocorrect="off"
-                    autocapitalize="off" spellcheck="false">
+                <textarea contentEditable="true" autocomplete="off" autocorrect="off" autocapitalize="off"
+                    spellcheck="false">
 t =0
 dt = 0,5
 m = 71 'Massa
