Imporved comments & resizing-performance.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ v = 0
     <!--
         Footer
      -->
-    <footer>2019 | See the source on <a href="https://github.com/PimMeulensteen/modeluva">Github</a></footer>
+    <footer>2019 | <a href="https://github.com/PimMeulensteen/modeluva">Github</a></footer>
 </body>
 
 <script src="preload.js"></script>
@@ -110,6 +110,6 @@ v = 0
 <script src="plotly.js"></script>
 <script src="plot.js"></script>
 
-<script src="main.js"></script>
+<script src="main.js" onload="run()"></script>
 
 </html>
