--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
     <meta name="theme-color" content="#a0002a">
-    <title>Modeluva</title>
+    <title>Modeleren</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         Navigation
      -->
     <nav>
-        Modeluva
+        modeleren.tools
     </nav>
 
     <section id="content">
