--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
                 Maximale waaarde van t: <input type="number" value="100" min="10" step="10" id="max_t_input" max="9990"
                     oninput="max_t.update();run()">. <br>
                 Afronden op n-decimalen: <input type="number" value="5" min="0" step="1" id="n_dec_input" max="10"
-                    oninput="decimal_places_interface.update();run()">. <br>
-                <button onclick="ui.addGraph();" title="Voeg een grafiek toe">+</button>
-                <button onclick="ui.removeGraph();run()" title="Verwijder een grafiek">-</button>
+                    oninput="decimal_places_interface.update();run()">.
+                <br>
+                Aantal grafieken: <span id="aantalGrafieken">1</span>.
+                <button class="plusminus" id="minus" onclick="ui.removeGraph();"
+                    title="Er moet ten minste één grafiek zijn.">-</button>
+                <button class="plusminus" id="plus" onclick="ui.addGraph();" title="Voeg een grafiek toe.">+</button>
 
 
                 <!--
             Graphs
         -->
                 <div id='graph_settings'>
+                    x-as | y-as
                     <div>
                         <input oninput="run()" type="text" value="t"><input oninput="run()" type="text" value="h"><input
                             oninput="run()" type="text" value=""><input oninput="run()" type="text" value=""><input
@@ -52,53 +56,47 @@
      -->
             <section class="input" id="loop">
                 <h2>Loop-functie</h2>
-                <textarea contentEditable="true" autocomplete="off" autocorrect="off" autocapitalize="off"
-                    spellcheck="false">
-t = t+dt
-Fz = m*g #This is a comment
-FL = 0,5*C*d*v^2
-
-SF = Fz-FL
-a = SF/m
-dv = a*dt
-v = v+dv
-dh = v*dt
-h = h-dh
-als h < 350 dan C = 4,298  eindals
-als h <= 0 dan stop eindals
-        </textarea>
+                <div id="loopDiv" type="text" contentEditable="true" autocomplete="off" autocorrect="off"
+                    autocapitalize="off" spellcheck="false" value=>
+                    #Dit is een regel commentaar.<br>
+                    t = t+dt <span class="comment">#Dit mag ook ná andere tekst.</span> <br>
+                    Fz = m*g <br>
+                    FL = 0,5*C*d*v^2<br>
+                    SF = Fz-FL<br>
+                    a = SF/m<br>
+                    dv = a*dt<br>
+                    v = v+dv<br>
+                    dh = v*dt<br>
+                    h = h-dh<br>
+                    als h < 350 dan C=4,298 eindals<br>
+                        als h <=0 dan stop eindals </div> </section> <!-- Setup -->
+                            <section class="input">
+                                <h2>Setup-functie</h2>
+                                <div id="setupDiv" contentEditable="true" autocomplete="off" autocorrect="off"
+                                    autocapitalize="off" spellcheck="false">
+                                    t =0<br>
+                                    dt = 0,5<br>
+                                    m = 71 'Massa<br>
+                                    g = 9,81 'Zwaarenkracht<br>
+                                    <br>
+                                    h = 1282 'Hoogte vansprong<br>
+                                    <br>
+                                    C = 1,31552490<br>
+                                    d = 1,20<br>
+                                    v = 0<br>
+                                </div>
+                            </section>
             </section>
-
             <!--
-        Setup
-     -->
-            <section class="input">
-                <h2>Setup-functie</h2>
-                <textarea contentEditable="true" autocomplete="off" autocorrect="off" autocapitalize="off"
-                    spellcheck="false">
-t =0
-dt = 0,5
-m = 71 'Massa
-g = 9,81 'Zwaarenkracht
-
-h = 1282 'Hoogte van sprong
-
-C = 1,31552490
-d = 1,20
-v = 0
-        </textarea>
-            </section>
-        </section>
-        <!--
         Graphs
      -->
-        <section id="output"></section>
-    </section>
+            <section id="output"></section>
+        </section>
 
-    <!--
+        <!--
         Footer
      -->
-    <footer>2019 | <a href="https://github.com/PimMeulensteen/modeluva">Github</a></footer>
+        <footer>2019 | <a href="https://github.com/PimMeulensteen/modeluva">Github</a></footer>
 </body>
 
 <script src="preload.js"></script>
