--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <section id="input">
             <section class="input" id="settings">
                 <h2>Instellingen</h2>
-                Maximale waaarde van t: <input type="number" value="100" min="10" step="10" id="max_t_input" max="9990"
-                    oninput="max_t.update();run()">. <br>
-                Afronden op n-decimalen: <input type="number" value="5" min="0" step="1" id="n_dec_input" max="10"
-                    oninput="decimal_places_interface.update();run()">.
-                <br>
+                Aantal keer dat <i>loop</i> wordt uitgevoerd: <input type="number" value="100" min="10" step="10"
+                    id="max_t_input" max="100000" oninput="max_t.update();run()"><br>
+                Afronden op n-decimalen:
+                <input type="number" value="5" min="0" step="1" id="n_dec_input" max="10"
+                    oninput="decimal_places_interface.update();run()"><br>
                 Aantal grafieken: <span id="aantalGrafieken">1</span>.
                 <button class="plusminus" id="minus" onclick="ui.removeGraph();"
                     title="Er moet ten minste één grafiek zijn.">-</button>
@@ -47,8 +47,10 @@
                             oninput="run()" type="text" value=""><input oninput="run()" type="text" value="">
                     </div>
 
+
                 </div>
                 <button onclick='run()' title="Maak de grafieken (Ctrl + Enter)" id="run_button">Maak model</button>
+                    
             </section>
 
             <!--
@@ -57,9 +59,9 @@
             <section class="input" id="loop">
                 <h2>Loop-functie</h2>
                 <div id="loopDiv" type="text" contentEditable="true" autocomplete="off" autocorrect="off"
-                    autocapitalize="off" spellcheck="false" value=>
+                    autocapitalize="off" spellcheck="false" oninput="//ui.formatText()    ">
                     #Dit is een regel commentaar.<br>
-                    t = t+dt <span class="comment">#Dit mag ook ná andere tekst.</span> <br>
+                    t = t+dt #Dit mag ook ná andere tekst. <br>
                     Fz = m*g <br>
                     FL = 0,5*C*d*v^2<br>
                     SF = Fz-FL<br>
