--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <!--
         Footer
      -->
-        <footer>2019 | <a href="https://github.com/PimMeulensteen/modeluva">Github</a></footer>
+        <footer>2019 | Bekijk de code op <a href="https://github.com/PimMeulensteen/modelleren.tools">Github</a> | Grafieken gemaakt met <a href="https://plot.ly/javascript/">plotly.js</a></footer>
 </body>
 
 <script src="preload.js"></script>
