--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Navigation
      -->
     <nav>
-        modelleren.tools
+        <h1>modelleren.tools</h1>
     </nav>
 
     <section id="content">
@@ -55,8 +55,7 @@
      -->
             <section class="input" id="loop">
                 <h2>Loop-functie</h2>
-                <div id="loopDiv" type="text" contentEditable="true" autocomplete="off" autocorrect="off"
-                    autocapitalize="off" spellcheck="false" oninput="//ui.formatText()    ">
+                <div id="loopDiv" oninput="//ui.formatText()    ">
                     #Dit is een regel commentaar.<br>
                     t = t+dt #Dit mag ook ná andere tekst. <br>
                     Fz = m*g <br>
@@ -67,46 +66,48 @@
                     v = v+dv<br>
                     dh = v*dt<br>
                     h = h-dh<br>
-                    als h < 350 dan C=4,298 eindals<br>
-                        als h <=0 dan stop eindals </div> </section> <!-- Setup -->
-                            <section class="input">
-                                <h2>Setup-functie</h2>
-                                <div id="setupDiv" contentEditable="true" autocomplete="off" autocorrect="off"
-                                    autocapitalize="off" spellcheck="false">
-                                    t =0<br>
-                                    dt = 0,5<br>
-                                    m = 71 'Massa<br>
-                                    g = 9,81 'Zwaarenkracht<br>
-                                    <br>
-                                    h = 1282 'Hoogte vansprong<br>
-                                    <br>
-                                    C = 1,31552490<br>
-                                    d = 1,20<br>
-                                    v = 0<br>
-                                </div>
-                            </section>
+                    als h &lt; 350 dan C=4,298 eindals<br>
+                    als h &lt;=0 dan stop eindals </div>
+            </section> <!-- Setup -->
+            <section class="input">
+                <h2>Setup-functie</h2>
+                <div id="setupDiv" contentEditable="true">
+                    t =0<br>
+                    dt = 0,5<br>
+                    m = 71 'Massa<br>
+                    g = 9,81 'Zwaarenkracht<br>
+                    <br>
+                    h = 1282 'Hoogte vansprong<br>
+                    <br>
+                    C = 1,31552490<br>
+                    d = 1,20<br>
+                    v = 0<br>
+                </div>
             </section>
-            <!--
+        </section>
+        <!--
         Graphs
      -->
-            <section id="output"></section>
-        </section>
+        <section id="output"></section>
+    </section>
 
-        <!--
+    <!--
         Footer
      -->
-        <footer>2019 | Bekijk de code op <a href="https://github.com/PimMeulensteen/modelleren.tools">Github</a> | Grafieken gemaakt met <a href="https://plot.ly/javascript/">plotly.js</a></footer>
+    <footer>2019 | Bekijk de code op <a href="https://github.com/PimMeulensteen/modelleren.tools">Github</a> | Grafieken
+        gemaakt met <a href="https://plot.ly/javascript/">plotly.js</a></footer>
+
+
+    <script src="preload.js"></script>
+
+    <script src="lines.js"></script>
+    <script src="model.js"></script>
+    <script src="interface.js"></script>
+
+    <script src="plotly.js"></script>
+    <script src="plot.js"></script>
+
+    <script src="main.js" onload="run()"></script>
 </body>
-
-<script src="preload.js"></script>
-
-<script src="lines.js"></script>
-<script src="model.js"></script>
-<script src="interface.js"></script>
-
-<script src="plotly.js"></script>
-<script src="plot.js"></script>
-
-<script src="main.js" onload="run()"></script>
 
 </html>
