--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
     <meta name="theme-color" content="#a0002a">
-    <title>modelleren</title>
+    <meta author="Pim Meulensteen">
+    <meta name="description" content="Dit is een webapp voor modelleren: een eindexamenonderdeel
+    van natuurkunde.">
+
+    <link rel="stylesheet" href="main.css">
+
+    <title>Modelleren </title>
 </head>
 
 <body>
