Duidelijke omschrijving invoer.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         Loop
      -->
             <div class="input" id="loop">
-                <h2>Loop-functie</h2>
-                <div class="editableDiv" id="loopDiv" oninput="//ui.formatText()    ">
+                <h2>Modelregels</h2>
+                <div class="editableDiv" id="loopDiv" contentEditable="true" spellcheck="false">
                     #Dit is een regel commentaar.<br>
                     t = t+dt #Dit mag ook ná andere tekst. <br>
                     Fz = m*g <br>
@@ -75,8 +75,8 @@
                     als h &lt;=0 dan stop eindals </div>
             </div> <!-- Setup -->
             <div class="input">
-                <h2>Setup-functie</h2>
-                <div class="editableDiv" id="setupDiv" contentEditable="true">
+                <h2>Startwaardes</h2>
+                <div class="editableDiv" id="setupDiv" contentEditable="true" spellcheck="false">
                     t =0<br>
                     dt = 0,5<br>
                     m = 71 'Massa<br>
