--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
                 <div id='graph_settings'>
                     x-as | y-as
                     <div>
-                        <input oninput="run()" type="text" value="t"><input oninput="run()" type="text" value="h"><input
-                            oninput="run()" type="text" value=""><input oninput="run()" type="text" value=""><input
-                            oninput="run()" type="text" value=""><input oninput="run()" type="text" value="">
+                        <input oninput="run()" type="text" value="t">
+                        <input oninput="run()" type="text" value="h">
+                        <input oninput="run()" type="text" value="">
+                        <input oninput="run()" type="text" value="">
+                        <input oninput="run()" type="text" value="">
+                        <input oninput="run()" type="text" value="">
                     </div>
 
 
