Unintendent effect reversed.

--- a/index.html
+++ b/index.html
@@ -37,12 +37,7 @@
                 <div id='graph_settings'>
                     x-as | y-as
                     <div>
-                        <input oninput="run()" type="text" value="t">
-                        <input oninput="run()" type="text" value="h">
-                        <input oninput="run()" type="text" value="">
-                        <input oninput="run()" type="text" value="">
-                        <input oninput="run()" type="text" value="">
-                        <input oninput="run()" type="text" value="">
+                        <input oninput="run()" type="text" value="t"><input oninput="run()" type="text" value="h"><input oninput="run()" type="text" value=""><input oninput="run()" type="text" value=""><input oninput="run()" type="text" value=""><input oninput="run()" type="text" value="">
                     </div>
                 </div>
                 <button onclick='run()' title="Maak de grafieken (Ctrl + Enter)" id="run_button">Maak model</button>
