Improved add/remove buttons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     id="max_t_input" max="100000" oninput="ui.setMaxT(this)"><br>
                 Aantal grafieken: <span id="aantalGrafieken">1</span>.
                 <button class="plusminus" id="minus" onclick="ui.removeGraph();"
-                    title="Er moet ten minste één grafiek zijn.">-</button>
+                    title="Er moet ten minste één grafiek zijn." disabled>-</button>
                 <button class="plusminus" id="plus" onclick="ui.addGraph();" title="Voeg een grafiek toe.">+</button>
                 <div id='graph_settings'>
                     x-as | y-as
