--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     title="Er moet ten minste één grafiek zijn." disabled>-</button>
                 <button class="plusminus" id="plus" onclick="ui.addGraph();" title="Voeg een grafiek toe.">+</button>
                 <div id='graph_settings'>
-                    x-as | y-as 
+                    x-as | y-as
                     <div>
                         <input oninput="run()" type="text" value="t"><input oninput="run()" type="text" value="h"><input oninput="run()" type="text" value=""><input oninput="run()" type="text" value=""><input oninput="run()" type="text" value=""><input oninput="run()" type="text" value="">
                     </div>
@@ -42,33 +42,32 @@
             </div>
             <div class="input" id="loop">
                 <h2>Modelregels</h2>
-                <div class="editableDiv" id="loopDiv" contentEditable="true" spellcheck="false">
-                    'Dit is een regel commentaar.<br>
-                    t = t+dt 'Dit mag ook ná andere tekst. <br>
-                    Fz = m*g <br>
-                    FL = 0,5*C*d*v^2<br>
-                    SF = Fz-FL<br>
-                    a = SF/m<br>
-                    dv = a*dt<br>
-                    v = v+dv<br>
-                    dh = v*dt<br>
-                    h = h-dh<br>
-                    als h &lt; 350 dan C=4,298 eindals<br>
-                    als h &lt;=0 dan stop eindals </div>
+                <div class="editableDiv" id="loopDiv" contentEditable="true" spellcheck="false">'Dit is een regel commentaar.
+t = t+dt 'Dit mag ook ná andere tekst.
+Fz = m*g
+FL = 0,5*C*d*v^2
+SF = Fz-FL
+a = SF/m
+dv = a*dt
+v = v+dv
+dh = v*dt
+h = h-dh
+als h &lt; 350 dan C=4,298 eindals
+als h &lt;=0 dan stop eindals
+</div>
             </div> <!-- Setup -->
             <div class="input">
                 <h2>Startwaardes</h2>
-                <div class="editableDiv" id="setupDiv" contentEditable="true" spellcheck="false">
-                    t =0<br>
-                    dt = 0,5<br>
-                    m = 71 'Massa<br>
-                    g = 9,81 'Zwaarenkracht<br>
-                    <br>
-                    h = 1282 'Hoogte vansprong<br>
-                    <br>
-                    C = 1,31552490<br>
-                    d = 1,20<br>
-                    v = 0<br>
+                <div class="editableDiv" id="setupDiv" contentEditable="true" spellcheck="false">t =0
+dt = 0,5
+m = 71 'Massa
+g = 9,81 'Zwaarenkracht
+
+h = 1282 'Hoogte vansprong
+
+C = 1,31552490
+d = 1,20
+v = 0
                 </div>
             </div>
         </div>
