add google searchconsole

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="description" content="Gratis webapp voor modelleren: een eindexamenonderdeel
     van natuurkunde.">
 
+    <meta name="google-site-verification" content="8U63tkzLuJdxjrlWiptJT0LUFRHlfO46AOHJNl2zxFE" />
+
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
