--- a/index.html
+++ b/index.html
@@ -8,86 +8,57 @@
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#a0002a">
     <meta author="Pim Meulensteen">
-    <meta name="description" content="Gratis webapp voor modelleren: een eindexamenonderdeel
-    van natuurkunde.">
+    <meta name="description"
+        content="Maak en voer natuurkundige modellen uit voorbereiding op je eindexamen natuurkunde.">
 
     <meta name="google-site-verification" content="8U63tkzLuJdxjrlWiptJT0LUFRHlfO46AOHJNl2zxFE" />
 
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
-    <title>Modelleren.tools</title>
+    <title>Modelleren voor Natuurkunde</title>
 </head>
 
 <body>
-    <nav>
-        <h1>modelleren.tools</h1>
-    </nav>
+    <div id='info'>
+        <h1>Modelleren.tools</h1>
+        <p>
+            Deze modelleertool is een gratis manier om in de browser natuurkundemodelen te
+            simuleren. Deze app is gemaakt met het idee dit complexe onderwerp zo
+            laagdrempelig en toegankelijk mogelijk te maken.
+        </p>
 
-    <div id="content">
-        <div id="input">
-            <div class="input" id="settings">
-                <h2>Instellingen</h2>
-                Aantal keer dat <i>loop</i> wordt uitgevoerd: <input type="number" value="100" min="10" step="10"
-                    id="max_t_input" max="100000" oninput="model.runTimes = this.value"><br>
-                Aantal grafieken: <span id="aantalGrafieken">1</span>.
-                <button class="plusminus" id="minus" onclick="ui.removeGraph();"
-                    title="Er moet ten minste één grafiek zijn." disabled>-</button>
-                <button class="plusminus" id="plus" onclick="ui.addGraph();" title="Voeg een grafiek toe.">+</button>
-                <div id='graph_settings'>
-                    x-as | y-as
-                    <div>
-                        <input oninput="run()" type="text" value="t"><input oninput="run()" type="text" value="h"><input oninput="run()" type="text" value=""><input oninput="run()" type="text" value=""><input oninput="run()" type="text" value=""><input oninput="run()" type="text" value="">
-                    </div>
-                </div>
-                <button onclick='run()' title="Maak de grafieken (Ctrl + Enter)" id="run_button">Maak model</button>
-            </div>
-            <div class="input" id="loop">
-                <h2>Modelregels</h2>
-                <div class="editableDiv" id="loopDiv" contentEditable="true" spellcheck="false">'Dit is een regel commentaar.
-t = t+dt 'Dit mag ook ná andere tekst.
-Fz = m*g
-FL = 0,5*C*d*v^2
-SF = Fz-FL
-a = SF/m
-dv = a*dt
-v = v+dv
-dh = v*dt
-h = h-dh
-als h &lt; 350 dan C=4,298 eindals
-als h &lt;=0 dan stop eindals
-</div>
-            </div> <!-- Setup -->
-            <div class="input">
-                <h2>Startwaardes</h2>
-                <div class="editableDiv" id="setupDiv" contentEditable="true" spellcheck="false">t =0
-dt = 0,5
-m = 71 'Massa
-g = 9,81 'Zwaarenkracht
+        <h2>Een beknopte uitleg</h2>
+        <h3></h3>
 
-h = 1282 'Hoogte vansprong
+        <h2>Veelgestelde vragen</h2>
+        <h3>Waarom is deze site gemaakt?</h3>
+        <p>
+            Toen dit onderwerp aan bod kwam, werd er op onze school gebruiktgemaakt van
+            Coach 6: een desktopapplicaite met veel meer mgoelijkheden dan modelleren.
+            Dit doet de navigatie en de gebruiksvriendelijkheid niet ten goed.
+            Enigzins uit frustratie en gemakt heb ik besloten om hiervoor een
+            alternatief voor Coach te maken.
+        </p>
+        <h3>Werkt iets niet?</h3>
+        <p>
+            Ik heb deze site in mijn (beperkte) vrije tijd gemaakt, en mijn best
+            gedaan om alles zo goed mogelijk te laten werken. Ongetwijfeld zitten er
+            nog ergens fouten. Mocht je zien, stuur graag een mail naar
+            <a href="mailto:help@meulensteen.tech">
+                help@meulensteen.tech
+            </a>
+        </p>
+        <p>Als je meer technische kennis hebt over webpaginas (met name Javascript), ben je
+            meer dan welkom om bij te dragen aan het project op <a
+                href="https://github.com/PimMeulensteen/modelleren.tools">Github</a>.
+        </p>
 
-C = 1,31552490
-d = 1,20
-v = 0
-                </div>
-            </div>
-        </div>
-        <div id="output"></div>
     </div>
-    <footer>
-        2019 | Bekijk de code op <a href="https://github.com/PimMeulensteen/modelleren.tools">Github</a>
-        | Grafieken gemaakt met <a href="https://plot.ly/javascript/">plotly.js</a>
-    </footer>
-    <script src="preload.js"></script>
 
-    <script src="model.js"></script>
-    <script src="interface.js"></script>
+    <div id="start">
+        <a href="/app/">Start de app.</a>
+    </div>
 
-    <script src="plotly.js"></script>
-    <script src="plot.js"></script>
-
-    <script src="main.js" onload="run()"></script>
 </body>
 
 </html>
